--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bignumber.js": "^9.1.0",
+    "double.js": "^1.1.0",
     "gmp-wasm": "^1.1.0",
     "p5": "^1.4.2"
   }
