--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bignumber.js": "^9.1.1",
     "double.js": "^1.1.0",
+    "eventmit": "^2.0.4",
     "p5": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
