canvas外のUIをreactで描画する (#2)
* 操作説明の位置を変えた

* canvas以外の箇所はreactを使う

* reactの外から書き込める適当なstoreを定義

* canvas内でのスクロールを避ける

* キー操作でもスクロールしないようにしておく

* TODOコメント

* 数値表示をreact側へ持っていく

* ガクガクするので親の長さを決めておく

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "devDependencies": {
     "@types/p5": "^1.6.0",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^5.0.4",
     "vite": "^4.2.1",
     "vitest": "^0.29.8"
@@ -17,6 +20,9 @@
   "dependencies": {
     "bignumber.js": "^9.1.1",
     "double.js": "^1.1.0",
-    "p5": "^1.6.0"
+    "eventmit": "^2.0.4",
+    "p5": "^1.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
