--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
+    "prettier": "^3.0.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.8",
     "vitest": "^0.34.1"
