shadcn/uiとtailwindを利用できるように

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,11 @@
     "noEmit": true,
     "noImplicitReturns": true,
     "skipLibCheck": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
