--- a/package.json
+++ b/package.json
@@ -10,25 +10,36 @@
   },
   "devDependencies": {
     "@types/chroma-js": "^2.4.0",
+    "@types/node": "^20.4.7",
     "@types/p5": "^1.6.2",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@vitejs/plugin-react": "^4.0.1",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.4",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.2"
+    "vite": "^4.4.8",
+    "vitest": "^0.34.1"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
-    "@mantine/core": "^6.0.15",
-    "@mantine/hooks": "^6.0.15",
-    "@tabler/icons-react": "^2.23.0",
+    "@mantine/core": "^6.0.17",
+    "@mantine/hooks": "^6.0.17",
+    "@tabler/icons-react": "^2.30.0",
     "bignumber.js": "^9.1.1",
     "chroma-js": "^2.4.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "double.js": "^1.1.0",
     "eventmit": "^2.0.4",
-    "p5": "^1.6.0",
+    "lucide-react": "^0.263.1",
+    "p5": "^1.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6"
   }
 }
