--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@radix-ui/colors": "^1.0.1",
     "@types/chroma-js": "^2.4.0",
     "@types/node": "^20.4.7",
     "@types/p5": "^1.6.2",
@@ -22,12 +23,19 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "vite": "^4.4.8",
-    "vitest": "^0.34.1"
+    "vitest": "^0.34.1",
+    "windy-radix-palette": "^0.6.1"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
-    "@mantine/core": "^6.0.17",
     "@mantine/hooks": "^6.0.17",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@tabler/icons-react": "^2.30.0",
     "bignumber.js": "^9.1.1",
     "chroma-js": "^2.4.2",
