画像をIndexedDBに保存するのでラッパーとしてidb-keyvalをインストール

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.0.0",
     "double.js": "^1.1.0",
     "eventmit": "^2.0.4",
+    "idb-keyval": "^6.2.1",
     "lucide-react": "^0.263.1",
     "p5": "^1.7.0",
     "react": "^18.2.0",
