--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "p5": "^1.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-promise-suspense": "^0.3.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6"
   }
