色関係のライブラリ導入

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "@radix-ui/colors": "^1.0.1",
     "@types/chroma-js": "^2.4.0",
+    "@types/culori": "^2.0.0",
+    "@types/d3-color": "^3.1.0",
+    "@types/d3-scale-chromatic": "^3.0.0",
     "@types/node": "^20.4.7",
     "@types/p5": "^1.6.2",
     "@types/react": "^18.2.18",
@@ -42,6 +45,9 @@
     "chroma-js": "^2.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "culori": "^3.2.0",
+    "d3-color": "^3.1.0",
+    "d3-scale-chromatic": "^3.0.0",
     "double.js": "^1.1.0",
     "eventmit": "^2.0.4",
     "idb-keyval": "^6.2.1",
