--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -18,8 +18,7 @@ wasm-bindgen = "0.2.84"
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
-astro-float = "0.7.1"
-getrandom = { version = "0.2", features = ["js"] }
+dashu-float = "0.3.2"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
