--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -26,11 +26,12 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: "16"
-      - name: Install dependencies
-        run: yarn install
+          node-version: "18"
+      - uses: pnpm/action-setup@v2
+        with:
+          run_install: true
       - name: Build
-        run: yarn build
+        run: pnpm build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
