--- a/package.json
+++ b/package.json
@@ -9,53 +9,53 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@radix-ui/colors": "^2.1.0",
-    "@types/chroma-js": "^2.4.1",
-    "@types/culori": "^2.0.1",
-    "@types/d3-color": "^3.1.1",
-    "@types/d3-scale-chromatic": "^3.0.0",
-    "@types/node": "^20.8.3",
-    "@types/p5": "^1.7.0",
-    "@types/react": "^18.2.25",
-    "@types/react-dom": "^18.2.11",
-    "@vitejs/plugin-react": "^4.1.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.5",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.11",
-    "vitest": "^0.34.6",
-    "windy-radix-palette": "^0.6.1"
+    "@radix-ui/colors": "2.1.0",
+    "@types/chroma-js": "2.4.1",
+    "@types/culori": "2.0.1",
+    "@types/d3-color": "3.1.1",
+    "@types/d3-scale-chromatic": "3.0.0",
+    "@types/node": "20.8.3",
+    "@types/p5": "1.7.0",
+    "@types/react": "18.2.25",
+    "@types/react-dom": "18.2.11",
+    "@vitejs/plugin-react": "4.1.0",
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.31",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "0.5.5",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2",
+    "vite": "4.4.11",
+    "vitest": "0.34.6",
+    "windy-radix-palette": "0.6.1"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@mantine/hooks": "^7.1.2",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@tabler/icons-react": "^2.38.0",
-    "bignumber.js": "^9.1.2",
-    "chroma-js": "^2.4.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "culori": "^3.2.0",
-    "d3-color": "^3.1.0",
-    "d3-scale-chromatic": "^3.0.0",
-    "eventmit": "^2.0.4",
-    "idb-keyval": "^6.2.1",
-    "lucide-react": "^0.284.0",
-    "p5": "^1.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-promise-suspense": "^0.3.4",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "@emotion/react": "11.11.1",
+    "@mantine/hooks": "7.1.2",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-scroll-area": "1.0.5",
+    "@radix-ui/react-slider": "1.1.2",
+    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-tabs": "1.0.4",
+    "@radix-ui/react-toast": "1.1.5",
+    "@radix-ui/react-tooltip": "1.0.7",
+    "@tabler/icons-react": "2.38.0",
+    "bignumber.js": "9.1.2",
+    "chroma-js": "2.4.2",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.0.0",
+    "culori": "3.2.0",
+    "d3-color": "3.1.0",
+    "d3-scale-chromatic": "3.0.0",
+    "eventmit": "2.0.4",
+    "idb-keyval": "6.2.1",
+    "lucide-react": "0.284.0",
+    "p5": "1.7.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-promise-suspense": "0.3.4",
+    "tailwind-merge": "1.14.0",
+    "tailwindcss-animate": "1.0.7"
   }
 }
