--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eventmit": "2.0.4",
     "idb-keyval": "6.2.1",
     "lucide-react": "0.284.0",
+    "neverthrow": "^6.0.0",
     "p5": "1.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
