lodash.throttleのインストール

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/culori": "2.1.0",
     "@types/d3-color": "3.1.3",
     "@types/d3-scale-chromatic": "3.0.3",
+    "@types/lodash.throttle": "4.1.9",
     "@types/node": "20.12.8",
     "@types/p5": "1.7.6",
     "@types/react": "18.3.1",
@@ -51,6 +52,7 @@
     "d3-scale-chromatic": "3.1.0",
     "eventmit": "2.0.4",
     "idb-keyval": "6.2.1",
+    "lodash.throttle": "4.1.1",
     "lucide-react": "0.377.0",
     "neverthrow": "6.2.1",
     "p5": "1.9.3",
