--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/p5": "1.7.6",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/ws": "8.5.12",
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.38",
@@ -61,6 +62,8 @@
     "react-dom": "18.3.1",
     "react-promise-suspense": "0.3.4",
     "tailwind-merge": "1.14.0",
-    "tailwindcss-animate": "1.0.7"
-  }
+    "tailwindcss-animate": "1.0.7",
+    "ws": "8.18.0"
+  },
+  "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
 }
