--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "server": "tsx src/server/index.ts"
   },
   "devDependencies": {
     "@radix-ui/colors": "2.1.0",
@@ -27,6 +28,7 @@
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
     "tailwindcss": "3.4.3",
+    "tsx": "4.19.0",
     "typescript": "5.4.5",
     "vite": "5.2.11",
     "vitest": "1.5.3",
