--- a/rust_client/Cargo.toml
+++ b/rust_client/Cargo.toml
@@ -6,5 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-astro-float = "0.9.4"
 rug = "1.26"
+tokio = { version = "1", features = ["full"] }
+tokio-tungstenite = "0.23.1"
+futures = "0.3"
+futures-util = "0.3"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+url = "2.5.2"
+
