--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "cross-env NODE_ENV=development vite",
+    "build": "cross-env NODE_ENV=production tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
     "server": "tsx src/server/index.ts"
@@ -24,6 +24,7 @@
     "@types/ws": "8.5.12",
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.19",
+    "cross-env": "7.0.3",
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
