--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "cross-env NODE_ENV=development vite",
+    "build": "cross-env NODE_ENV=production tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "server": "tsx src/server/index.ts"
   },
   "devDependencies": {
     "@radix-ui/colors": "2.1.0",
@@ -20,12 +21,15 @@
     "@types/p5": "1.7.6",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/ws": "8.5.12",
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.19",
+    "cross-env": "7.0.3",
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
     "tailwindcss": "3.4.3",
+    "tsx": "4.19.0",
     "typescript": "5.4.5",
     "vite": "5.2.11",
     "vitest": "1.5.3",
@@ -61,6 +65,7 @@
     "react-dom": "18.3.1",
     "react-promise-suspense": "0.3.4",
     "tailwind-merge": "1.14.0",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "ws": "8.18.0"
   }
 }
