--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "tsx src/server/index.ts"
   },
   "devDependencies": {
+    "@eslint/js": "9.17.0",
     "@radix-ui/colors": "2.1.0",
     "@types/chroma-js": "2.4.4",
     "@types/culori": "2.1.0",
@@ -25,12 +26,14 @@
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.19",
     "cross-env": "7.0.3",
+    "eslint": "9.17.0",
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
     "tailwindcss": "3.4.3",
     "tsx": "4.19.0",
-    "typescript": "5.4.5",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.19.1",
     "vite": "5.2.11",
     "vitest": "1.5.3",
     "windy-radix-palette": "0.6.1"
