--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "server": "tsx src/server/index.ts"
   },
   "devDependencies": {
+    "@eslint/compat": "1.2.4",
     "@eslint/js": "9.17.0",
     "@radix-ui/colors": "2.1.0",
     "@types/chroma-js": "2.4.4",
@@ -28,6 +29,7 @@
     "autoprefixer": "10.4.19",
     "cross-env": "7.0.3",
     "eslint": "9.17.0",
+    "eslint-plugin-react-hooks": "5.1.0",
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
