eslint-plugin-react追加

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "10.4.19",
     "cross-env": "7.0.3",
     "eslint": "9.17.0",
+    "eslint-plugin-react": "7.37.3",
     "eslint-plugin-react-hooks": "5.1.0",
     "postcss": "8.4.38",
     "prettier": "3.2.5",
