--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "9.17.0",
     "eslint-plugin-react": "7.37.3",
     "eslint-plugin-react-hooks": "5.1.0",
+    "eslint-plugin-tailwindcss": "3.17.5",
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
