ESLint入ってなかったので入れた (#60)
* Install dependencies

* eslint config追加

* auto-fix

* tailwindconfigをtsに

* Ignore dist

* no-empty

* no-unused-vars

* _prefixつきのは見逃す設定を追加

* no-unused-vars

* no-explicit-any以外対処

* store以外対処

* storeに型をつけた

* useStoreValueの型引数の使い方おかしかったのを修正

* eslint-plugin-react-hooksいれた

* eslint-plugin-react追加

* react/jsx-no-target-blank

* eslint-plugin-tailwindcssいれた

* eslint --fix

* 謎クラスを削除

--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "cross-env NODE_ENV=production tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "lint": "eslint .",
     "server": "tsx src/server/index.ts"
   },
   "devDependencies": {
+    "@eslint/compat": "1.2.4",
+    "@eslint/js": "9.17.0",
     "@radix-ui/colors": "2.1.0",
     "@types/chroma-js": "2.4.4",
     "@types/culori": "2.1.0",
@@ -25,12 +28,17 @@
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.19",
     "cross-env": "7.0.3",
+    "eslint": "9.17.0",
+    "eslint-plugin-react": "7.37.3",
+    "eslint-plugin-react-hooks": "5.1.0",
+    "eslint-plugin-tailwindcss": "3.17.5",
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
     "tailwindcss": "3.4.3",
     "tsx": "4.19.0",
-    "typescript": "5.4.5",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.19.1",
     "vite": "5.2.11",
     "vitest": "1.5.3",
     "windy-radix-palette": "0.6.1"
