--- a/components.json
+++ b/components.json
@@ -10,7 +10,9 @@
     "cssVariables": true
   },
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils"
+    "components": "@/shadcn/components",
+    "utils": "@/shadcn/utils",
+    "lib": "@/shadcn/lib",
+    "hooks": "@/shadcn/hooks"
   }
 }
