--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "18.3.0",
     "@types/ws": "8.5.12",
     "@vitejs/plugin-react": "4.2.1",
+    "@webgpu/types": "0.1.56",
     "autoprefixer": "10.4.19",
     "cross-env": "7.0.3",
     "eslint": "9.17.0",
