--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@mantine/hooks": "7.9.0",
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-radio-group": "1.2.3",
     "@radix-ui/react-scroll-area": "1.0.5",
     "@radix-ui/react-separator": "1.0.3",
     "@radix-ui/react-slider": "1.1.2",
