--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "18.3.0",
     "@types/ws": "8.5.12",
     "@vitejs/plugin-react": "4.2.1",
+    "@webgpu/types": "0.1.56",
     "autoprefixer": "10.4.19",
     "cross-env": "7.0.3",
     "eslint": "9.17.0",
@@ -51,6 +52,7 @@
     "@mantine/hooks": "7.9.0",
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-radio-group": "1.2.3",
     "@radix-ui/react-scroll-area": "1.0.5",
     "@radix-ui/react-separator": "1.0.3",
     "@radix-ui/react-slider": "1.1.2",
