--- a/package.json
+++ b/package.json
@@ -49,16 +49,6 @@
   },
   "dependencies": {
     "@mantine/hooks": "8.1.3",
-    "@radix-ui/react-dialog": "1.0.5",
-    "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-radio-group": "1.2.3",
-    "@radix-ui/react-scroll-area": "1.0.5",
-    "@radix-ui/react-separator": "1.0.3",
-    "@radix-ui/react-slider": "1.1.2",
-    "@radix-ui/react-slot": "1.0.2",
-    "@radix-ui/react-tabs": "1.0.4",
-    "@radix-ui/react-toast": "1.1.5",
-    "@radix-ui/react-tooltip": "1.0.7",
     "@tabler/icons-react": "3.34.0",
     "bignumber.js": "9.3.1",
     "chroma-js": "3.1.2",
@@ -74,6 +64,7 @@
     "lucide-react": "0.525.0",
     "neverthrow": "8.2.0",
     "p5": "1.9.3",
+    "radix-ui": "1.4.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-promise-suspense": "0.3.4",
