--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@eslint/compat": "1.3.1",
     "@eslint/js": "9.31.0",
-    "@radix-ui/colors": "2.1.0",
+    "@radix-ui/colors": "3.0.0",
     "@types/chroma-js": "3.1.1",
     "@types/culori": "4.0.0",
     "@types/d3-color": "3.1.3",
@@ -45,7 +45,7 @@
     "typescript-eslint": "8.37.0",
     "vite": "7.0.5",
     "vitest": "3.2.4",
-    "windy-radix-palette": "0.6.1"
+    "windy-radix-palette": "2.0.0-beta.7"
   },
   "dependencies": {
     "@mantine/hooks": "8.1.3",
