--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@eslint/compat": "1.3.1",
     "@eslint/js": "9.31.0",
     "@radix-ui/colors": "3.0.0",
+    "@tailwindcss/postcss": "4.1.11",
     "@types/chroma-js": "3.1.1",
     "@types/culori": "4.0.0",
     "@types/d3-color": "3.1.3",
@@ -29,7 +30,6 @@
     "@types/ws": "8.18.1",
     "@vitejs/plugin-react": "4.6.0",
     "@webgpu/types": "0.1.64",
-    "autoprefixer": "10.4.21",
     "cross-env": "7.0.3",
     "eslint": "9.31.0",
     "eslint-plugin-react": "7.37.5",
@@ -39,7 +39,7 @@
     "postcss": "8.5.6",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.14",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "4.1.11",
     "tsx": "4.20.3",
     "typescript": "5.8.3",
     "typescript-eslint": "8.37.0",
