--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@mantine/hooks": "8.1.3",
     "@tabler/icons-react": "3.34.0",
+    "@tailwindcss/vite": "4.1.11",
     "bignumber.js": "9.3.1",
     "chroma-js": "3.1.2",
     "class-variance-authority": "0.7.1",
