--- a/package.json
+++ b/package.json
@@ -14,72 +14,60 @@
     "dev-all": "run-p dev server rust-client"
   },
   "devDependencies": {
-    "@eslint/compat": "1.2.4",
-    "@eslint/js": "9.17.0",
-    "@radix-ui/colors": "2.1.0",
-    "@types/chroma-js": "2.4.4",
-    "@types/culori": "2.1.0",
+    "@eslint/compat": "1.3.1",
+    "@eslint/js": "9.31.0",
+    "@radix-ui/colors": "3.0.0",
+    "@tailwindcss/vite": "4.1.11",
+    "@types/chroma-js": "3.1.1",
+    "@types/culori": "4.0.0",
     "@types/d3-color": "3.1.3",
-    "@types/d3-scale-chromatic": "3.0.3",
+    "@types/d3-scale-chromatic": "3.1.0",
     "@types/lodash.throttle": "4.1.9",
-    "@types/node": "20.12.8",
+    "@types/node": "22.16.4",
     "@types/p5": "1.7.6",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "@types/ws": "8.5.12",
-    "@vitejs/plugin-react": "4.2.1",
-    "@webgpu/types": "0.1.56",
-    "autoprefixer": "10.4.19",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@types/ws": "8.18.1",
+    "@vitejs/plugin-react": "4.6.0",
+    "@webgpu/types": "0.1.64",
     "cross-env": "7.0.3",
-    "eslint": "9.17.0",
-    "eslint-plugin-react": "7.37.3",
-    "eslint-plugin-react-hooks": "5.1.0",
-    "eslint-plugin-tailwindcss": "3.17.5",
-    "npm-run-all2": "7.0.2",
-    "postcss": "8.4.38",
-    "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "0.5.14",
-    "tailwindcss": "3.4.3",
-    "tsx": "4.19.0",
-    "typescript": "5.7.3",
-    "typescript-eslint": "8.19.1",
-    "vite": "5.2.11",
-    "vitest": "1.5.3",
-    "windy-radix-palette": "0.6.1"
+    "eslint": "9.31.0",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-tailwindcss": "3.18.2",
+    "npm-run-all2": "8.0.4",
+    "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "0.6.14",
+    "tailwindcss": "4.1.11",
+    "tsx": "4.20.3",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.37.0",
+    "vite": "7.0.5",
+    "vitest": "3.2.4",
+    "windy-radix-palette": "2.0.0-beta.7"
   },
   "dependencies": {
-    "@emotion/react": "11.11.4",
-    "@mantine/hooks": "7.9.0",
-    "@radix-ui/react-dialog": "1.0.5",
-    "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-radio-group": "1.2.3",
-    "@radix-ui/react-scroll-area": "1.0.5",
-    "@radix-ui/react-separator": "1.0.3",
-    "@radix-ui/react-slider": "1.1.2",
-    "@radix-ui/react-slot": "1.0.2",
-    "@radix-ui/react-tabs": "1.0.4",
-    "@radix-ui/react-toast": "1.1.5",
-    "@radix-ui/react-tooltip": "1.0.7",
-    "@tabler/icons-react": "3.3.0",
-    "bignumber.js": "9.1.2",
-    "chroma-js": "2.4.2",
-    "class-variance-authority": "0.7.0",
+    "@mantine/hooks": "8.1.3",
+    "@tabler/icons-react": "3.34.0",
+    "bignumber.js": "9.3.1",
+    "chroma-js": "3.1.2",
+    "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "culori": "4.0.1",
+    "culori": "4.0.2",
     "d3-color": "3.1.0",
     "d3-scale-chromatic": "3.1.0",
-    "es-toolkit": "1.31.0",
-    "eventmit": "2.0.4",
-    "idb-keyval": "6.2.1",
+    "es-toolkit": "1.39.7",
+    "eventmit": "3.0.0",
+    "idb-keyval": "6.2.2",
     "lodash.throttle": "4.1.1",
-    "lucide-react": "0.377.0",
-    "neverthrow": "6.2.1",
-    "p5": "1.9.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "lucide-react": "0.525.0",
+    "neverthrow": "8.2.0",
+    "p5": "1.11.8",
+    "radix-ui": "1.4.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-promise-suspense": "0.3.4",
-    "tailwind-merge": "1.14.0",
-    "tailwindcss-animate": "1.0.7",
-    "ws": "8.18.0"
+    "tailwind-merge": "3.3.1",
+    "ws": "8.18.3"
   }
 }
