--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview",
     "test": "vitest",
     "lint": "eslint .",
+    "check-format": "biome format .",
+    "format": "biome format --write .",
     "server": "tsx src/server/index.ts",
     "rust-client": "cd rust_client && cargo run && cd ../",
     "dev-all": "run-p dev server rust-client"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.1.4",
     "@eslint/compat": "1.3.1",
     "@eslint/js": "9.31.0",
     "@radix-ui/colors": "3.0.0",
@@ -36,8 +39,6 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-tailwindcss": "3.18.2",
     "npm-run-all2": "8.0.4",
-    "prettier": "3.6.2",
-    "prettier-plugin-tailwindcss": "0.6.14",
     "tailwindcss": "4.1.11",
     "tsx": "4.20.3",
     "typescript": "5.8.3",
